[project]
name = "py-near-forked"
version = "1.2.0"
description = "Pretty simple and fully asynchronous framework for working with NEAR blockchain"
authors = [{ name = "pvolnov", email = "petr@herewallet.app" }]
license = { file = "LICENSE" }

keywords = ["python", "near", "async"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = "<3.12,>=3.8"
dependencies = [
    "base58<3.0.0,>=2.1.1",
    "httpx==0.26.0",
    "py-near-primitives==0.2.3",
    "frozenlist<2.0.0,>=1.4.1",
    "pynacl<2.0.0,>=1.5.0",
    "loguru<1.0.0,>=0.7.2",
    "pydantic<3.0.0,>=2.6.2",
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
homepage = "https://github.com/pvolnov/py-near"
documentation = "https://py-near.readthedocs.io/en/latest"
repository = "https://github.com/pvolnov/py-near"
changelog = "https://github.com/pvolnov/py-near/blob/main/CHANGELOG.md"
funding = "https://opencollective.com/py-near"
twitter = "https://twitter.com/p_volnov"

[tool.pytest.ini_options]
addopts = "--capture=no --tb=native"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/py_near"]

[dependency-groups]
dev = [
    "mypy<1.0,>=0.930",
    "pytest<8.0,>=7.0",
    "Sphinx<5.0.0,>=4.3.2",
    "sphinx-rtd-theme<2.0.0,>=1.0.0",
    "pytest-asyncio<1.0.0,>=0.23.5",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"
build_command = "uv build"
